fix: use List.of() for empty warnings after JDK 17 bump (modernizer)